# open62541cpp

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  HACKING.md  README.md  vcpkg.json
CPM_modules/: FindPackageProject.cmake.cmake
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/: coro.hpp
include/open62541cpp/: open62541cpp.hpp  server.hpp  server_config.hpp  status_code.hpp  timer.hpp
source/: open62541cpp.cpp  server.cpp  server_config.cpp  status_code.cpp  timer.cpp
test/: CMakeLists.txt
test/source/: coro_test.cpp  open62541cpp_test.cpp
vcpkg-overlays/triplets/: x64-linux-clang.cmake
